# osagt

./: .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
docker/: Dockerfile.sandbox
hitl-contributor/: .env.example  SETUP.md  cli.py  northflank.json  railway.toml  render.yaml  requirements.txt  scheduler.py  web_server.py
hitl-contributor/.github/workflows/: ci.yml
hitl-contributor/docker/: Dockerfile.app
hitl-contributor/src/: __init__.py
hitl-contributor/src/config/: settings.py
hitl-contributor/src/github/: client.py
hitl-contributor/src/llm/: client.py
hitl-contributor/src/ui/: terminal.py
hitl-contributor/src/utils/: email_sender.py  history.py  logging_setup.py
hitl-contributor/src/web/: api.py
hitl-contributor/src/web/static/: index.html
hitl-contributor/tests/: test_state.py
hitl-contributor/tests/integration/: test_api.py
hitl-contributor/tests/unit/: test_nodes.py
src/agent/: graph.py  state.py
src/agent/nodes/: architect.py  developer.py  scanner.py  submitter.py
src/config/: settings.py
src/utils/: retry.py
tests/: conftest.py
